--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <button id="newGame" class="newGameBtn">New Game</button>
     </div>
     <div id="game"></div>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>You have avenged the world!</p>
+          <button id="newGameModal" class="newGameBtn">New Game</button>
+        </div>
+      
+      </div>
   </div>
 </body>
 
