--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Memory Game</title>
   <link href="https://fonts.googleapis.com/css?family=Marvel&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/styleTest.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -52,7 +52,7 @@
 </html>
 
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-<script src="js/script.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 
